--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -6,22 +6,28 @@ body {
 .card {
   width: 400px;
   background: #fff;
-  margin: 16px auto;
+  margin: 15px auto;
+  padding: 10px;
 }
 
 .title {
   background: #e3f4ff;
+  margin: 0 0 10px 0;
 }
 
 .content {
   background: #e3f4ff;
+  margin: 0 0 10px 0;
 }
 
 .button-container {
   background: #e3f4ff;
+  text-align: center;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  margin: 0 auto;
 }
